--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav {
   z-index: 1000;
   display: flex;
   justify-content: center;
-  gap: 28px;
+  gap: 26px;
   padding: 18px;
   background: rgba(5,8,20,.75);
   backdrop-filter: blur(12px);
@@ -46,7 +46,7 @@ section {
 
 section h2 {
   font-size: 3.2rem;
-  margin-bottom: 60px;
+  margin-bottom: 50px;
   font-weight: 900;
 }
 
@@ -59,29 +59,19 @@ section h2 {
   justify-content: center;
 }
 
-.hero-content img {
+.hero img {
   width: 350px;
   margin-bottom: 28px;
   filter:
-    drop-shadow(0 0 50px rgba(56,189,248,.9))
-    drop-shadow(0 0 120px rgba(56,189,248,.7))
-    drop-shadow(0 0 220px rgba(99,102,241,.55))
-    drop-shadow(0 0 340px rgba(99,102,241,.45));
+    drop-shadow(0 0 60px rgba(56,189,248,.9))
+    drop-shadow(0 0 140px rgba(56,189,248,.7))
+    drop-shadow(0 0 260px rgba(99,102,241,.55));
 }
 
-.hero h1 {
-  font-size: 4.3rem;
-  margin: 10px 0;
-}
+.hero h1 { font-size: 4.3rem; margin: 10px 0; }
+.hero p { max-width: 720px; font-size: 1.25rem; opacity: .9; }
 
-.hero p {
-  max-width: 720px;
-  font-size: 1.25rem;
-  opacity: .9;
-  margin: auto;
-}
-
-/* STATS */
+/* COUNTERS */
 .counters {
   display: flex;
   justify-content: center;
@@ -96,35 +86,18 @@ section h2 {
   border-radius: 18px;
 }
 
-.counter h2 {
-  font-size: 2.7rem;
-  margin: 0;
-}
+.counter h2 { font-size: 2.7rem; margin: 0; }
 
 /* FEATURED */
 .featured {
-  background: linear-gradient(135deg, #1e293b, #020617);
-  border-radius: 26px;
-  padding: 32px;
-  margin-bottom: 60px;
-  box-shadow: 0 40px 120px rgba(0,0,0,.6);
-}
-
-.featured img {
-  width: 100%;
-  border-radius: 18px;
-  margin-bottom: 20px;
-}
-
-.featured h3 {
-  font-size: 2.4rem;
-  margin: 10px 0;
+  max-width: 760px; /* ~1/3 smaller */
+  margin: 0 auto 80px;
 }
 
 /* GAMES */
 .games-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: 36px;
 }
 
@@ -136,12 +109,10 @@ section h2 {
   transition: transform .25s ease;
 }
 
-.game-card:hover {
-  transform: translateY(-6px);
-}
+.game-card:hover { transform: translateY(-6px); }
 
 .game-thumb {
-  aspect-ratio: 16 / 9;
+  aspect-ratio: 16/9;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -150,72 +121,94 @@ section h2 {
 }
 
 .game-thumb::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background: linear-gradient(
-    to top,
-    rgba(0,0,0,.65),
-    rgba(0,0,0,.25),
-    transparent
-  );
+  content:"";
+  position:absolute;
+  inset:0;
+  background: linear-gradient(to top, rgba(0,0,0,.6), transparent);
 }
 
-/* 🔥 CENTERED + STROKED TITLE */
+/* TITLE: centered X, top Y */
 .game-title {
   position: absolute;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.8rem;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.6rem;
   font-weight: 900;
+  color: white;
+  padding: 6px 14px;
+  border-radius: 12px;
   text-align: center;
-  padding: 20px;
-  color: #fff;
+  background: rgba(0,0,0,.35);
   text-shadow:
     -2px -2px 0 #000,
      2px -2px 0 #000,
     -2px  2px 0 #000,
-     2px  2px 0 #000,
-     0 4px 12px rgba(0,0,0,.8);
+     2px  2px 0 #000;
 }
 
 .game-footer {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  align-items: center;
-  padding: 14px 18px;
-  background: #0a0f1f;
-  font-weight: 800;
+  grid-template-columns:1fr auto 1fr;
+  align-items:center;
+  padding:14px 18px;
+  background:#0a0f1f;
+  font-weight:800;
 }
 
 .play-btn {
-  background: #22c55e;
-  color: black;
-  padding: 10px 24px;
-  border-radius: 999px;
-  text-decoration: none;
-  font-weight: 900;
+  background:#22c55e;
+  color:black;
+  padding:10px 26px;
+  border-radius:999px;
+  font-weight:900;
+  text-decoration:none;
 }
 
-/* MOBILE */
-@media (max-width: 768px) {
-  .hero h1 { font-size: 2.6rem; }
-  .hero-content img { width: 240px; }
-  .games-grid { grid-template-columns: 1fr; }
+/* APPLY */
+.apply-box {
+  background: rgba(255,255,255,.07);
+  padding: 42px;
+  border-radius: 22px;
+  margin: 32px auto;
+  max-width: 640px;
+}
+
+.apply-box a {
+  display:inline-block;
+  margin-top:18px;
+  padding:14px 30px;
+  background:#38bdf8;
+  color:black;
+  border-radius:999px;
+  font-weight:900;
+  text-decoration:none;
+}
+
+/* ABOUT */
+.about p {
+  font-size:1.2rem;
+  max-width:920px;
+  margin:26px auto;
+  line-height:1.9;
 }
 
 /* FOOTER */
 footer {
-  padding: 60px 20px;
+  padding:60px 20px;
 }
 
 footer a {
-  margin: 0 18px;
-  color: #38bdf8;
-  text-decoration: none;
-  font-weight: 800;
+  margin:0 18px;
+  color:#38bdf8;
+  font-weight:800;
+  text-decoration:none;
+}
+
+/* MOBILE */
+@media(max-width:768px){
+  .hero h1 { font-size:3rem; }
+  section h2 { font-size:2.4rem; }
 }
 </style>
 </head>
@@ -227,99 +220,127 @@ footer a {
   <a href="#games">Games</a>
   <a href="#apply">Apply</a>
   <a href="#about">About</a>
+  <a href="#contact">Contact</a>
 </nav>
 
+<!-- HOME -->
 <section id="home" class="hero">
-  <div class="hero-content">
+  <div>
     <img src="logo.png">
     <h1>Amazing Games Studio</h1>
     <p>Building high-quality Roblox experiences designed to reach the front page.</p>
 
     <div class="counters">
-      <div class="counter"><h2 id="totalPlayers">—</h2>Players Online</div>
-      <div class="counter"><h2 id="totalVisits">—</h2>Total Visits</div>
+      <div class="counter"><h2 id="totalPlayers">0</h2>Players Online</div>
+      <div class="counter"><h2 id="totalVisits">0</h2>Total Visits</div>
       <div class="counter"><h2>3</h2>Games</div>
     </div>
   </div>
 </section>
 
+<!-- GAMES -->
 <section id="games">
-  <h2>Our Games</h2>
-  <div id="featuredGame"></div>
+  <h2 id="featuredTitle" style="display:none;">Featured Game</h2>
+  <div class="featured" id="featuredGame"></div>
+
+  <h2>All Games</h2>
   <div class="games-grid" id="gamesGrid"></div>
+</section>
+
+<!-- APPLY -->
+<section id="apply">
+  <h2>Apply</h2>
+  <div class="apply-box">
+    <h3>Apply for a Job</h3>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">Apply</a>
+  </div>
+  <div class="apply-box">
+    <h3>Looking for Investment?</h3>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">Submit Game</a>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="about">
+  <h2>About Us</h2>
+  <p>Amazing Games is an independent Roblox studio founded in January 2025.</p>
+  <p>We invest in, build, and publish games with real front-page potential.</p>
+  <p>We balance creativity, strategy, polish, and monetization.</p>
+  <p><strong>If it’s amazing, we build it.</strong></p>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+  <h2>Get in Touch</h2>
+  <footer>
+    <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
+  </footer>
 </section>
 
 <script>
 const API_URL = "https://api.amazinggames.cloud/stats";
 
 const games = [
-  { id: 7349544299, name: "🔥 Prison Island", placeId: 92661235863904 },
-  { id: 6925763113, name: "🚪 99 Rooms in a Basement", placeId: 97441539448665 },
-  { id: 8168837991, name: "🍔 Eat Food To Grow Bigger!", placeId: 74672529469747 }
+  { id:7349544299, name:"🔥 Prison Island", placeId:92661235863904 },
+  { id:6925763113, name:"🚪 99 Rooms in a Basement", placeId:97441539448665 },
+  { id:8168837991, name:"🍔 Eat Food To Grow Bigger!", placeId:74672529469747 }
 ];
 
-function animate(el, target) {
-  let start = 0;
-  const step = () => {
-    start += Math.ceil(target / 40);
-    if (start > target) start = target;
-    el.innerText = start.toLocaleString();
-    if (start < target) requestAnimationFrame(step);
-  };
-  step();
-}
+const totalPlayersEl = document.getElementById("totalPlayers");
+const totalVisitsEl  = document.getElementById("totalVisits");
 
-function renderGames() {
-  const grid = document.getElementById("gamesGrid");
-  grid.innerHTML = "";
-  games.forEach(game => {
-    grid.innerHTML += `
-      <div class="game-card">
-        <div class="game-thumb" style="background-image:url('${game.id}.png')">
-          <div class="game-title">${game.name}</div>
-        </div>
-        <div class="game-footer">
-          <div id="players-${game.id}">👥 —</div>
-          <a class="play-btn" href="https://www.roblox.com/games/${game.placeId}" target="_blank">▶ PLAY</a>
-          <div id="visits-${game.id}">👁 —</div>
-        </div>
-      </div>
-    `;
-  });
-}
-
-async function updateStats() {
-  const res = await fetch(API_URL);
-  const json = await res.json();
-
-  let totalPlayers = 0;
-  let totalVisits = 0;
-
-  json.data.forEach(game => {
-    totalPlayers += game.playing;
-    totalVisits += game.visits;
-
-    document.getElementById(`players-${game.id}`).innerText = `👥 ${game.playing}`;
-    document.getElementById(`visits-${game.id}`).innerText = `👁 ${game.visits.toLocaleString()}`;
-  });
-
-  animate(document.getElementById("totalPlayers"), totalPlayers);
-  animate(document.getElementById("totalVisits"), totalVisits);
-
-  const top = [...json.data].sort((a,b)=>b.playing-a.playing)[0];
-  document.getElementById("featuredGame").innerHTML = `
-    <div class="featured">
-      <h2>🔥 Featured Game</h2>
-      <img src="${top.id}.png">
-      <h3>${top.name}</h3>
-      <p>👥 ${top.playing} playing now</p>
-      <a class="play-btn" href="https://www.roblox.com/games/${top.rootPlaceId}" target="_blank">▶ PLAY</a>
+function card(game){
+  return `
+  <div class="game-card">
+    <div class="game-thumb" style="background-image:url('${game.id}.png')">
+      <div class="game-title">${game.name}</div>
     </div>
-  `;
+    <div class="game-footer">
+      <div id="players-${game.id}">👥 —</div>
+      <a class="play-btn" href="https://www.roblox.com/games/${game.placeId}" target="_blank">▶ PLAY</a>
+      <div id="visits-${game.id}">👁 —</div>
+    </div>
+  </div>`;
 }
 
-renderGames();
-updateStats();
+games.forEach(g => gamesGrid.innerHTML += card(g));
+
+async function loadStats(){
+  const r = await fetch(API_URL);
+  const j = await r.json();
+  if (!j.data) return;
+
+  let tp=0, tv=0;
+
+  j.data.forEach(g=>{
+    tp+=g.playing||0;
+    tv+=g.visits||0;
+    document.getElementById(`players-${g.id}`).innerText=`👥 ${g.playing}`;
+    document.getElementById(`visits-${g.id}`).innerText=`👁 ${g.visits.toLocaleString()}`;
+  });
+
+  animate(totalPlayersEl,tp);
+  animate(totalVisitsEl,tv);
+
+  const featured = j.data.filter(g=>g.playing>=500).sort((a,b)=>b.playing-a.playing);
+  if(featured.length){
+    featuredGame.innerHTML = card({id:featured[0].id,name:featured[0].name,placeId:featured[0].rootPlaceId});
+    featuredGame.style.display="block";
+    featuredTitle.style.display="block";
+  }
+}
+
+function animate(el,target){
+  let n=0;
+  const i=setInterval(()=>{
+    n+=Math.ceil((target-n)/10);
+    el.innerText=n.toLocaleString();
+    if(n>=target) clearInterval(i);
+  },30);
+}
+
+loadStats();
 </script>
 
 </body>
