--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ nav {
   z-index: 1000;
   display: flex;
   justify-content: center;
-  gap: 26px;
+  gap: 28px;
   padding: 18px;
   background: rgba(5,8,20,.75);
   backdrop-filter: blur(12px);
@@ -45,62 +45,82 @@ section {
 }
 
 section h2 {
-  font-size: 3.2rem;
-  margin-bottom: 50px;
+  font-size: 3rem;
+  margin-bottom: 40px;
   font-weight: 900;
 }
 
 /* HERO */
 .hero {
-  min-height: 100vh;
+  min-height: 85vh;
   padding-top: 140px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.hero img {
-  width: 350px;
-  margin-bottom: 28px;
+.hero-content img {
+  width: 320px;
+  margin-bottom: 26px;
   filter:
     drop-shadow(0 0 60px rgba(56,189,248,.9))
-    drop-shadow(0 0 140px rgba(56,189,248,.7))
-    drop-shadow(0 0 260px rgba(99,102,241,.55));
+    drop-shadow(0 0 160px rgba(99,102,241,.6));
 }
 
-.hero h1 { font-size: 4.3rem; margin: 10px 0; }
-.hero p { max-width: 720px; font-size: 1.25rem; opacity: .9; }
+.hero h1 {
+  font-size: 4rem;
+  margin: 10px 0;
+}
 
-/* COUNTERS */
+.hero p {
+  max-width: 720px;
+  font-size: 1.2rem;
+  opacity: .9;
+  margin: auto;
+}
+
+/* STATS */
 .counters {
   display: flex;
   justify-content: center;
-  gap: 36px;
-  margin-top: 48px;
+  gap: 28px;
+  margin-top: 40px;
   flex-wrap: wrap;
 }
 
 .counter {
   background: rgba(255,255,255,.07);
-  padding: 26px 42px;
+  padding: 22px 36px;
   border-radius: 18px;
 }
 
-.counter h2 { font-size: 2.7rem; margin: 0; }
+.counter h2 {
+  font-size: 2.5rem;
+  margin: 0;
+}
 
 /* FEATURED */
-.featured {
-  max-width: 760px; /* ~1/3 smaller */
-  margin: 0 auto 80px;
+#featured {
+  padding-top: 40px;
+}
+
+.featured-wrap {
+  max-width: 820px;
+  margin: auto;
 }
 
 /* GAMES */
+#games {
+  padding-top: 40px;
+}
+
 .games-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   gap: 36px;
 }
 
+/* CARD */
 .game-card {
   background: #0d1222;
   border-radius: 22px;
@@ -109,10 +129,12 @@ section h2 {
   transition: transform .25s ease;
 }
 
-.game-card:hover { transform: translateY(-6px); }
+.game-card:hover {
+  transform: translateY(-6px);
+}
 
 .game-thumb {
-  aspect-ratio: 16/9;
+  aspect-ratio: 16 / 9;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -121,25 +143,36 @@ section h2 {
 }
 
 .game-thumb::after {
-  content:"";
-  position:absolute;
-  inset:0;
-  background: linear-gradient(to top, rgba(0,0,0,.6), transparent);
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: linear-gradient(
+    to top,
+    rgba(0,0,0,.55),
+    rgba(0,0,0,.15),
+    transparent
+  );
 }
 
-/* TITLE: centered X, top Y */
+/* TITLE */
 .game-title {
   position: absolute;
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 1.6rem;
-  font-weight: 900;
-  color: white;
+  max-width: 92%;
   padding: 6px 14px;
   border-radius: 12px;
+
+  font-weight: 900;
+  color: white;
   text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   background: rgba(0,0,0,.35);
+
   text-shadow:
     -2px -2px 0 #000,
      2px -2px 0 #000,
@@ -147,25 +180,26 @@ section h2 {
      2px  2px 0 #000;
 }
 
+/* FOOTER */
 .game-footer {
   display: grid;
-  grid-template-columns:1fr auto 1fr;
-  align-items:center;
-  padding:14px 18px;
-  background:#0a0f1f;
-  font-weight:800;
+  grid-template-columns: 1fr auto 1fr;
+  align-items: center;
+  padding: 14px 18px;
+  background: #0a0f1f;
+  font-weight: 800;
 }
 
 .play-btn {
-  background:#22c55e;
-  color:black;
-  padding:10px 26px;
-  border-radius:999px;
-  font-weight:900;
-  text-decoration:none;
+  background: #22c55e;
+  color: black;
+  padding: 10px 24px;
+  border-radius: 999px;
+  text-decoration: none;
+  font-weight: 900;
 }
 
-/* APPLY */
+/* APPLY / ABOUT */
 .apply-box {
   background: rgba(255,255,255,.07);
   padding: 42px;
@@ -175,40 +209,39 @@ section h2 {
 }
 
 .apply-box a {
-  display:inline-block;
-  margin-top:18px;
-  padding:14px 30px;
-  background:#38bdf8;
-  color:black;
-  border-radius:999px;
-  font-weight:900;
-  text-decoration:none;
+  display: inline-block;
+  margin-top: 18px;
+  padding: 14px 30px;
+  background: #38bdf8;
+  color: black;
+  border-radius: 999px;
+  text-decoration: none;
+  font-weight: 900;
 }
 
-/* ABOUT */
 .about p {
-  font-size:1.2rem;
-  max-width:920px;
-  margin:26px auto;
-  line-height:1.9;
+  font-size: 1.15rem;
+  max-width: 900px;
+  margin: 26px auto;
+  line-height: 1.8;
+  opacity: .95;
 }
 
-/* FOOTER */
 footer {
-  padding:60px 20px;
+  padding: 60px 20px;
 }
 
 footer a {
-  margin:0 18px;
-  color:#38bdf8;
-  font-weight:800;
-  text-decoration:none;
+  margin: 0 18px;
+  color: #38bdf8;
+  text-decoration: none;
+  font-weight: 800;
 }
 
 /* MOBILE */
-@media(max-width:768px){
-  .hero h1 { font-size:3rem; }
-  section h2 { font-size:2.4rem; }
+@media (max-width: 768px) {
+  .hero h1 { font-size: 3rem; }
+  .counter h2 { font-size: 2rem; }
 }
 </style>
 </head>
@@ -223,58 +256,49 @@ footer a {
   <a href="#contact">Contact</a>
 </nav>
 
-<!-- HOME -->
 <section id="home" class="hero">
-  <div>
+  <div class="hero-content">
     <img src="logo.png">
     <h1>Amazing Games Studio</h1>
     <p>Building high-quality Roblox experiences designed to reach the front page.</p>
 
     <div class="counters">
-      <div class="counter"><h2 id="totalPlayers">0</h2>Players Online</div>
-      <div class="counter"><h2 id="totalVisits">0</h2>Total Visits</div>
-      <div class="counter"><h2>3</h2>Games</div>
+      <div class="counter"><h2 id="totalPlayers">0</h2><span>Players Online</span></div>
+      <div class="counter"><h2 id="totalVisits">0</h2><span>Total Visits</span></div>
+      <div class="counter"><h2>3</h2><span>Games</span></div>
     </div>
   </div>
 </section>
 
-<!-- GAMES -->
-<section id="games">
-  <h2 id="featuredTitle" style="display:none;">Featured Game</h2>
-  <div class="featured" id="featuredGame"></div>
+<section id="featured" style="display:none">
+  <h2>Featured Game</h2>
+  <div class="featured-wrap" id="featuredGame"></div>
+</section>
 
+<section id="games">
   <h2>All Games</h2>
   <div class="games-grid" id="gamesGrid"></div>
 </section>
 
-<!-- APPLY -->
 <section id="apply">
   <h2>Apply</h2>
   <div class="apply-box">
-    <h3>Apply for a Job</h3>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform" target="_blank">Apply</a>
-  </div>
-  <div class="apply-box">
-    <h3>Looking for Investment?</h3>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform" target="_blank">Submit Game</a>
+    <p>Apply to work with Amazing Games.</p>
+    <a href="https://docs.google.com/forms" target="_blank">Apply</a>
   </div>
 </section>
 
-<!-- ABOUT -->
 <section id="about" class="about">
   <h2>About Us</h2>
-  <p>Amazing Games is an independent Roblox studio founded in January 2025.</p>
-  <p>We invest in, build, and publish games with real front-page potential.</p>
-  <p>We balance creativity, strategy, polish, and monetization.</p>
+  <p>Amazing Games is an independent Roblox studio focused on long-term success, retention, and front-page quality.</p>
   <p><strong>If it’s amazing, we build it.</strong></p>
 </section>
 
-<!-- CONTACT -->
 <section id="contact">
   <h2>Get in Touch</h2>
   <footer>
     <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
-    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
+    <a href="https://www.roblox.com/communities" target="_blank">Roblox Group</a>
   </footer>
 </section>
 
@@ -282,65 +306,91 @@ footer a {
 const API_URL = "https://api.amazinggames.cloud/stats";
 
 const games = [
-  { id:7349544299, name:"🔥 Prison Island", placeId:92661235863904 },
-  { id:6925763113, name:"🚪 99 Rooms in a Basement", placeId:97441539448665 },
-  { id:8168837991, name:"🍔 Eat Food To Grow Bigger!", placeId:74672529469747 }
+  { id: 7349544299, name: "🔥 Prison Island", placeId: 92661235863904 },
+  { id: 6925763113, name: "🚪 99 Rooms in a Basement", placeId: 97441539448665 },
+  { id: 8168837991, name: "🍔 Eat Food To Grow Bigger!", placeId: 74672529469747 }
 ];
 
-const totalPlayersEl = document.getElementById("totalPlayers");
-const totalVisitsEl  = document.getElementById("totalVisits");
-
-function card(game){
-  return `
-  <div class="game-card">
-    <div class="game-thumb" style="background-image:url('${game.id}.png')">
-      <div class="game-title">${game.name}</div>
-    </div>
-    <div class="game-footer">
-      <div id="players-${game.id}">👥 —</div>
-      <a class="play-btn" href="https://www.roblox.com/games/${game.placeId}" target="_blank">▶ PLAY</a>
-      <div id="visits-${game.id}">👁 —</div>
-    </div>
-  </div>`;
+function animateCount(el, to) {
+  let val = 0;
+  const step = Math.max(1, Math.floor(to / 60));
+  const i = setInterval(() => {
+    val += step;
+    if (val >= to) {
+      el.innerText = to.toLocaleString();
+      clearInterval(i);
+    } else {
+      el.innerText = val.toLocaleString();
+    }
+  }, 20);
 }
 
-games.forEach(g => gamesGrid.innerHTML += card(g));
+function scaleTitles() {
+  document.querySelectorAll(".game-title").forEach(t => {
+    let size = 26;
+    t.style.fontSize = size + "px";
+    while (t.scrollWidth > t.clientWidth && size > 14) {
+      size--;
+      t.style.fontSize = size + "px";
+    }
+  });
+}
 
-async function loadStats(){
-  const r = await fetch(API_URL);
-  const j = await r.json();
-  if (!j.data) return;
+function renderGames() {
+  const grid = document.getElementById("gamesGrid");
+  grid.innerHTML = "";
+  games.forEach(g => {
+    grid.innerHTML += `
+      <div class="game-card">
+        <div class="game-thumb" style="background-image:url('${g.id}.png')">
+          <div class="game-title">${g.name}</div>
+        </div>
+        <div class="game-footer">
+          <div id="players-${g.id}">👥 —</div>
+          <a class="play-btn" href="https://www.roblox.com/games/${g.placeId}" target="_blank">▶ PLAY</a>
+          <div id="visits-${g.id}">👁 —</div>
+        </div>
+      </div>`;
+  });
+  scaleTitles();
+}
 
-  let tp=0, tv=0;
+async function updateStats() {
+  const res = await fetch(API_URL);
+  const json = await res.json();
 
-  j.data.forEach(g=>{
-    tp+=g.playing||0;
-    tv+=g.visits||0;
-    document.getElementById(`players-${g.id}`).innerText=`👥 ${g.playing}`;
-    document.getElementById(`visits-${g.id}`).innerText=`👁 ${g.visits.toLocaleString()}`;
+  let totalP = 0, totalV = 0;
+  let featured = null;
+
+  json.data.forEach(g => {
+    totalP += g.playing || 0;
+    totalV += g.visits || 0;
+
+    if (g.playing >= 500 && (!featured || g.playing > featured.playing)) {
+      featured = g;
+    }
+
+    document.getElementById(`players-${g.id}`)?.innerText = `👥 ${g.playing}`;
+    document.getElementById(`visits-${g.id}`)?.innerText = `👁 ${g.visits.toLocaleString()}`;
   });
 
-  animate(totalPlayersEl,tp);
-  animate(totalVisitsEl,tv);
+  animateCount(document.getElementById("totalPlayers"), totalP);
+  animateCount(document.getElementById("totalVisits"), totalV);
 
-  const featured = j.data.filter(g=>g.playing>=500).sort((a,b)=>b.playing-a.playing);
-  if(featured.length){
-    featuredGame.innerHTML = card({id:featured[0].id,name:featured[0].name,placeId:featured[0].rootPlaceId});
-    featuredGame.style.display="block";
-    featuredTitle.style.display="block";
+  if (featured) {
+    document.getElementById("featured").style.display = "block";
+    document.getElementById("featuredGame").innerHTML = `
+      <div class="game-card">
+        <div class="game-thumb" style="background-image:url('${featured.id}.png')">
+          <div class="game-title">${featured.name}</div>
+        </div>
+      </div>`;
+    scaleTitles();
   }
 }
 
-function animate(el,target){
-  let n=0;
-  const i=setInterval(()=>{
-    n+=Math.ceil((target-n)/10);
-    el.innerText=n.toLocaleString();
-    if(n>=target) clearInterval(i);
-  },30);
-}
-
-loadStats();
+renderGames();
+updateStats();
 </script>
 
 </body>
