--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ section h2 {
 
 /* HERO */
 .hero {
-  min-height: 85vh;
+  min-height: 80vh;
   padding-top: 140px;
   display: flex;
   align-items: center;
@@ -107,6 +107,7 @@ section h2 {
 .featured-wrap {
   max-width: 820px;
   margin: auto;
+  transform: scale(0.66); /* shrink by ~1/3 */
 }
 
 /* GAMES */
@@ -172,7 +173,6 @@ section h2 {
   text-overflow: ellipsis;
 
   background: rgba(0,0,0,.35);
-
   text-shadow:
     -2px -2px 0 #000,
      2px -2px 0 #000,
@@ -199,7 +199,7 @@ section h2 {
   font-weight: 900;
 }
 
-/* APPLY / ABOUT */
+/* APPLY */
 .apply-box {
   background: rgba(255,255,255,.07);
   padding: 42px;
@@ -219,14 +219,16 @@ section h2 {
   font-weight: 900;
 }
 
+/* ABOUT */
 .about p {
   font-size: 1.15rem;
   max-width: 900px;
   margin: 26px auto;
-  line-height: 1.8;
+  line-height: 1.9;
   opacity: .95;
 }
 
+/* CONTACT */
 footer {
   padding: 60px 20px;
 }
@@ -282,16 +284,30 @@ footer a {
 
 <section id="apply">
   <h2>Apply</h2>
+
   <div class="apply-box">
-    <p>Apply to work with Amazing Games.</p>
-    <a href="https://docs.google.com/forms" target="_blank">Apply</a>
+    <h3>Apply for a Developer Job</h3>
+    <p>Interested in working with Amazing Games as a developer, builder, or designer? Apply here to be considered for future projects.</p>
+    <a href="https://docs.google.com/forms" target="_blank">Apply for a Job</a>
+  </div>
+
+  <div class="apply-box">
+    <h3>Pitch Your Game for Investment</h3>
+    <p>Have a Roblox game with strong potential? Pitch your project to Amazing Games for possible investment, publishing, or partnership.</p>
+    <a href="https://docs.google.com/forms" target="_blank">Submit Your Game</a>
   </div>
 </section>
 
 <section id="about" class="about">
   <h2>About Us</h2>
-  <p>Amazing Games is an independent Roblox studio focused on long-term success, retention, and front-page quality.</p>
-  <p><strong>If it’s amazing, we build it.</strong></p>
+
+  <p>Amazing Games is an independent Roblox game studio founded in January 2025 with one clear mission: to invest in, build, and publish amazing games with real front-page potential.</p>
+
+  <p>We focus on creating experiences that are not only fun to play, but also designed to succeed long-term through strong retention, smart monetization, and replayable core gameplay loops.</p>
+
+  <p>Our studio believes great Roblox games come from the balance of creativity and strategy. This means thoughtful game design, clean and optimized scripting, strong visual identity, polished UI, and monetization that enhances gameplay rather than hurting it.</p>
+
+  <p>Since our founding, Amazing Games has operated with a long-term mindset: build quality first, learn from every release, and continuously raise our standards.</p>
 </section>
 
 <section id="contact">
@@ -311,14 +327,14 @@ const games = [
   { id: 8168837991, name: "🍔 Eat Food To Grow Bigger!", placeId: 74672529469747 }
 ];
 
-function animateCount(el, to) {
+function animateCount(el, target) {
   let val = 0;
-  const step = Math.max(1, Math.floor(to / 60));
-  const i = setInterval(() => {
+  const step = Math.max(1, Math.floor(target / 60));
+  const interval = setInterval(() => {
     val += step;
-    if (val >= to) {
-      el.innerText = to.toLocaleString();
-      clearInterval(i);
+    if (val >= target) {
+      el.innerText = target.toLocaleString();
+      clearInterval(interval);
     } else {
       el.innerText = val.toLocaleString();
     }
@@ -350,7 +366,8 @@ function renderGames() {
           <a class="play-btn" href="https://www.roblox.com/games/${g.placeId}" target="_blank">▶ PLAY</a>
           <div id="visits-${g.id}">👁 —</div>
         </div>
-      </div>`;
+      </div>
+    `;
   });
   scaleTitles();
 }
@@ -359,23 +376,27 @@ async function updateStats() {
   const res = await fetch(API_URL);
   const json = await res.json();
 
-  let totalP = 0, totalV = 0;
+  let totalPlayers = 0;
+  let totalVisits = 0;
   let featured = null;
 
   json.data.forEach(g => {
-    totalP += g.playing || 0;
-    totalV += g.visits || 0;
+    totalPlayers += g.playing || 0;
+    totalVisits += g.visits || 0;
 
     if (g.playing >= 500 && (!featured || g.playing > featured.playing)) {
       featured = g;
     }
 
-    document.getElementById(`players-${g.id}`)?.innerText = `👥 ${g.playing}`;
-    document.getElementById(`visits-${g.id}`)?.innerText = `👁 ${g.visits.toLocaleString()}`;
+    const p = document.getElementById(`players-${g.id}`);
+    const v = document.getElementById(`visits-${g.id}`);
+
+    if (p) p.innerText = `👥 ${g.playing}`;
+    if (v) v.innerText = `👁 ${g.visits.toLocaleString()}`;
   });
 
-  animateCount(document.getElementById("totalPlayers"), totalP);
-  animateCount(document.getElementById("totalVisits"), totalV);
+  animateCount(document.getElementById("totalPlayers"), totalPlayers);
+  animateCount(document.getElementById("totalVisits"), totalVisits);
 
   if (featured) {
     document.getElementById("featured").style.display = "block";
@@ -384,7 +405,8 @@ async function updateStats() {
         <div class="game-thumb" style="background-image:url('${featured.id}.png')">
           <div class="game-title">${featured.name}</div>
         </div>
-      </div>`;
+      </div>
+    `;
     scaleTitles();
   }
 }
