--- a/index.html
+++ b/index.html
@@ -296,6 +296,26 @@ footer a {
     <p>Have a Roblox game with strong potential? Pitch your project to Amazing Games for possible investment, publishing, or partnership.</p>
     <a href="https://docs.google.com/forms" target="_blank">Submit Your Game</a>
   </div>
+  <div class="apply-box">
+  <h3>Submit a Game Idea</h3>
+  <p>
+    Have a strong Roblox game idea but don’t have the time, skills, or team to build it?
+    Submit your idea to Amazing Games for review.
+  </p>
+  <p>
+    If your idea is selected and developed into a published game by Amazing Games,
+    you will receive <strong>1% ownership</strong> of that game.
+  </p>
+  <p style="opacity: 0.85; font-size: 0.95rem;">
+    Please note: submitting an idea does not guarantee it will be used.
+    We review ideas based on originality, feasibility, and long-term potential.
+  </p>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHc-b2TcEqPzX2uUhzXxFgyEnmBSYMSg8o8eqTQNPWVd-4IQ/viewform"
+     target="_blank">
+    Submit a Game Idea
+  </a>
+</div>
+
 </section>
 
 <section id="about" class="about">
