--- a/index.html
+++ b/index.html
@@ -288,13 +288,13 @@ footer a {
   <div class="apply-box">
     <h3>Apply for a Developer Job</h3>
     <p>Interested in working with Amazing Games as a developer, builder, or designer? Apply here to be considered for future projects.</p>
-    <a href="https://docs.google.com/forms" target="_blank">Apply for a Job</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLScGb9I1iWpLjKjNDKYG8Qn1NDRFFimzN5p_SmoYYOw57-qL_A/viewform?usp=sharing&ouid=111345259265149092750" target="_blank">Apply for a Job</a>
   </div>
 
   <div class="apply-box">
     <h3>Pitch Your Game for Investment</h3>
     <p>Have a Roblox game with strong potential? Pitch your project to Amazing Games for possible investment, publishing, or partnership.</p>
-    <a href="https://docs.google.com/forms" target="_blank">Submit Your Game</a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSchT5pipyVwRRMcsIXe_RvsfjwI55topk29jd-uLuFlsLL8aQ/viewform?usp=sharing&ouid=111345259265149092750">Submit Your Game</a>
   </div>
   <div class="apply-box">
   <h3>Submit a Game Idea</h3>
@@ -334,7 +334,7 @@ footer a {
   <h2>Get in Touch</h2>
   <footer>
     <a href="https://discord.gg/KDgXznhSsc" target="_blank">Discord</a>
-    <a href="https://www.roblox.com/communities" target="_blank">Roblox Group</a>
+    <a href="https://www.roblox.com/communities/17209770/Amazing-Games-Co#!/about" target="_blank">Roblox Group</a>
   </footer>
 </section>
 
